@@ -1,1 +1,1 @@
-{"version":"5.4-RC1","releasedate":"2016-07-10"}
+{"version":"5.4-RC1","releasedate":"2016-07-11"}
